# weave

./: .gitignore  .gitleaks.toml  ANATOMY.md  BLOAT_REPORT.md  CLAUDE.md  IDEAS.md  ISSUES.md  LOOPS.md  Makefile  README.md  SCRATCHPAD.md  docker-compose.yml  harness-improvements.md  package-lock.json  package.json  spec-helper-findings.md
.claude/: .gitignore  HARNESS.md  settings.json  weave-few-shot.txt
.claude/agents/: design.md  engineer.md  product-owner.md  prototyper.md  quality-assurance.md  tech-architect.md
.claude/commands/: anatomy.md  architect.md  elicit.md  help.md  po.md  (+9 more)
docs/: claude-harness-overview.md  index.md  log.md  running-the-implement-loop.md
prototypes/: BluShift-transcript.md  thoughts.md
prototypes/weave-prototype/backend/: .dockerignore  CLAUDE.md  Dockerfile  pyproject.toml
prototypes/weave-prototype/backend/app/: __init__.py  config.py  main.py  models.py  namespaces.py
prototypes/weave-prototype/backend/app/api/: __init__.py  routes.py  settings_store.py
prototypes/weave-prototype/backend/app/ingest/: __init__.py  schema.py
prototypes/weave-prototype/backend/app/llm/: __init__.py  ollama.py  service.py
prototypes/weave-prototype/backend/app/ontology/: __init__.py  seed.py  store.py
prototypes/weave-prototype/backend/app/projects/: __init__.py  manager.py
prototypes/weave-prototype/backend/app/validation/: __init__.py  custom_rules.py  rules.py  shacl.py  shapes.py
prototypes/weave-prototype/backend/tests/: conftest.py  test_api.py  test_ingest.py  test_llm.py  test_projects.py  test_store.py  test_validation.py
(+1195 files in other folders)
