[project]
name = "weave-backend"
version = "0.1.0"
description = "Weave backend — ontology store, graph projection, and LLM-driven RDF mutation."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyoxigraph>=0.5,<0.6",
    "rdflib>=7.0",
    "pyshacl>=0.26",
    "anthropic>=0.40",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "radon>=6.0",
    "xenon>=0.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C90"]
# B008: FastAPI's Depends()/Query() in argument defaults is idiomatic.
ignore = ["B008"]
mccabe = { max-complexity = 10 }

[tool.ruff.lint.per-file-ignores]
# seed.py is a verbatim Turtle data document; its lines are not code.
"app/ontology/seed.py" = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
